# tree-sitter-lean

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-lean.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lean/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLeanTests/: TreeSitterLeanTests.swift
grammar/: attr.js  command.js  commands.js  decl.js  do.js  docs.js  level.js  literals.js  module.js  syntax.js  tactic.js  term.js  util.js
grammar/tactic/: rcases.js
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: commands.txt
