[package]
name = "tree-sitter-lean"
description = "Lean grammar for tree-sitter"
version = "0.1.0"
authors = ["Lua Reis <me@lua.blog.br>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "lean"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/estradilua/tree-sitter-lean"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.5"
